# autometrics-rs

./: .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  autometrics.rules.yml  example.rules.yml  prometheus-ssr.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml
autometrics/: Cargo.toml  README.md  build.rs
autometrics-cli/: Cargo.toml  README.md
autometrics-cli/src/: main.rs  sloth.rs
autometrics-macros/: Cargo.toml
autometrics-macros/src/: error_labels.rs  instrument.rs  lib.rs  objectives.rs  parse.rs  result_labels.rs
autometrics-macros/tests/: error_labels.rs
autometrics-macros/tests/error_labels/fail/: wrong_attribute.rs  wrong_attribute.stderr  wrong_kv_attribute.rs  wrong_kv_attribute.stderr  wrong_result_name.rs  wrong_result_name.stderr  wrong_variant.rs  wrong_variant.stderr
autometrics-macros/tests/error_labels/pass/: macro.rs
autometrics/benches/: basic_benchmark.rs
autometrics/src/: README.md  alerts.rs  constants.rs  labels.rs  lib.rs  objectives.rs  otel_push_exporter.rs  prometheus_exporter.rs  settings.rs  task_local.rs
autometrics/src/backends/: mod.rs
autometrics/src/exemplars/: mod.rs  opentelemetry.rs  tracing.rs  tracing_opentelemetry.rs
autometrics/src/integrations/: mod.rs  tracing.rs
autometrics/src/tracker/: metrics.rs  mod.rs  opentelemetry.rs  prometheus.rs  prometheus_client.rs
autometrics/tests/: autometrics_label.rs  compilation.rs  compile_test.rs  custom_histogram_buckets_test.rs  error_locus.rs  exemplars_test.rs  init_to_zero_test.rs  integration_test.rs  objectives_test.rs  result_labels.rs  settings_custom_registry.rs  settings_histogram_buckets_test.rs  settings_service_name_test.rs
autometrics/tests/compilation/error_locus/fail/: report_original_line.rs  report_original_line.stderr
autometrics/tests/compilation/result_labels/fail/: wrong_attribute.stderr  wrong_kv_attribute.stderr  wrong_result_name.stderr  wrong_variant.stderr
autometrics/tests/compilation/result_labels/pass/: async_trait_support.rs  macro.rs
autometrics/tests/error_locus/fail/: arg_count.stderr
autometrics/tests/result_labels/fail/: async_trait_support.rs  async_trait_support.stderr  wrong_attribute.rs  wrong_attribute.stderr  wrong_kv_attribute.rs  wrong_kv_attribute.stderr  wrong_result_name.rs  wrong_result_name.stderr  wrong_variant.rs  wrong_variant.stderr
autometrics/tests/result_labels/pass/: async_trait_support.rs  generics.rs  macro.rs
docs/: why.md
examples/: Cargo.toml  README.md  alerts.rs  axum.rs  prometheus.yml
examples/actix-web/: Cargo.toml  README.md
examples/actix-web/src/: main.rs
examples/alerts/: Cargo.toml  README.md
examples/alerts/src/: main.rs
examples/axum/: Cargo.toml  README.md
examples/axum/src/: main.rs
examples/custom-metrics/: Cargo.toml  README.md
examples/custom-metrics/src/: main.rs
examples/exemplars-opentelemetry/: Cargo.toml
examples/exemplars-opentelemetry/src/: main.rs
examples/exemplars-tracing/: Cargo.toml
examples/exemplars-tracing-opentelemetry/: Cargo.toml  README.md
examples/exemplars-tracing-opentelemetry/src/: main.rs
examples/exemplars-tracing/src/: main.rs
examples/full-api/: Cargo.toml  README.md  build.rs
examples/full-api/src/: database.rs  error.rs  main.rs  routes.rs  util.rs
examples/grpc-http/: Cargo.toml  README.md  build.rs
examples/grpc-http/proto/: job.proto
examples/grpc-http/src/: db_manager.rs  main.rs  server.rs  shutdown.rs
examples/opentelemetry-push/: Cargo.toml  README.md  otel-collector-config.yml
examples/opentelemetry-push-custom/: Cargo.toml  README.md
examples/opentelemetry-push-http/: Cargo.toml  README.md  otel-collector-config.yml
examples/opentelemetry-push/src/: main.rs
examples/otlp-push-controller/: Cargo.toml  README.md
examples/otlp-push-controller/src/: main.rs
examples/tracing/: Cargo.toml  README.md
examples/tracing/src/: main.rs
examples/util/: Cargo.toml  alerting_rules.yml  autometrics.rules.yml  mod.rs  prometheus.yml
examples/util/.gitpod/: Dockerfile
examples/util/src/: lib.rs
macros/: Cargo.toml  build.rs
macros/src/: lib.rs  parse.rs
metrics-attributes/: Cargo.toml
metrics-attributes-macros/src/: lib.rs
metrics-attributes/src/: lib.rs  tests.rs
src/: README.md  alerts.rs  labels.rs  lib.rs  prometheus.rs  prometheus_exporter.rs  result_labels.rs  task_local.rs  tests.rs  tracker.rs
src/tracker/: metrics.rs  mod.rs  opentelemetry.rs  prometheus.rs
tests/: integration_test.rs
