[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Fiberplane <info@fiberplane.com>", "Evan Schwartz <3262610+emschwartz@users.noreply.github.com>"]
description = " Easily add metrics to your code that actually help you spot and debug issues in production. Built on Prometheus and OpenTelemetry."
documentation = "https://docs.rs/autometrics"
repository = "https://github.com/autometrics-dev/autometrics-rs"
homepage = "https://autometrics.dev"
license = "MIT OR Apache-2.0"
keywords = ["metrics", "prometheus", "opentelemetry"]
categories = ["development-tools::profiling"]

[workspace]
default-members = ["autometrics", "autometrics-cli", "autometrics-macros"]
members = [
  "autometrics",
  "autometrics-cli",
  "autometrics-macros",
  "examples/*"
]
exclude = ["examples/data", "examples/target"]

[workspace.dependencies]
autometrics-macros = { version = "0.4.0", path = "autometrics-macros" }
