[package]
name = "autometrics-cli"
description = "The command line interface for autometrics"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
clap = { version = "4.1", features = ["derive"] }
