[package]
name = "autometrics-macros"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
percent-encoding = "2.2"
proc-macro2 = "1"
quote = "1"
regex = "1.10.2"
syn =  { version = "2", features = ["full"] }
