[package]
name = "autometrics"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[features]
# Metrics backends
metrics-0_21 = ["dep:metrics"]
opentelemetry-0_20 = ["dep:opentelemetry-0-20", "opentelemetry-0-20/metrics", "dep:prometheus"]
opentelemetry-0_21 = ["dep:opentelemetry-0-21", "opentelemetry-0-21/metrics", "dep:prometheus"]
prometheus-0_13 = ["dep:prometheus"]
prometheus-client-0_21 = ["dep:prometheus-client"]

# Deprecated feature flags
metrics = ["metrics-0_21"]
opentelemetry = ["opentelemetry-0_20"]
prometheus = ["prometheus-0_13"]
prometheus-client = ["prometheus-client-0_21"]
exemplars-tracing-opentelemetry = ["exemplars-tracing-opentelemetry-0_20"]
prometheus-exporter = ["prometheus-exporter-otel-0_20"]

# Misc
prometheus-exporter-otel-0_20 = [
  "prometheus-exporter-parent",
  "dep:opentelemetry-prometheus-0-13",
  "dep:opentelemetry-sdk-0-20",
]

prometheus-exporter-otel-0_21 = [
  "prometheus-exporter-parent",
  "dep:opentelemetry-prometheus-0-14",
  "dep:opentelemetry-sdk-0-21",
]

prometheus-exporter-parent = [
  "http",
  "metrics-exporter-prometheus",
  "dep:prometheus",
  "dep:prometheus-client",
]

otel-push-exporter = [
  "dep:opentelemetry-sdk-0-21",
  "dep:opentelemetry-0-21",
  "dep:opentelemetry-otlp-0-21",
  "opentelemetry-otlp-0-21/metrics",
  "opentelemetry-otlp-0-21/tls-roots"
]

otel-push-exporter-http = [
  "otel-push-exporter",
  "opentelemetry-otlp-0-21/http-proto"
]

otel-push-exporter-grpc = [
  "otel-push-exporter",
  "opentelemetry-otlp-0-21/grpc-tonic"
]

otel-push-exporter-tokio = [
  "otel-push-exporter",
  "opentelemetry-sdk-0-21/rt-tokio"
]

otel-push-exporter-tokio-current-thread = [
  "otel-push-exporter",
  "opentelemetry-sdk-0-21/rt-tokio-current-thread"
]

otel-push-exporter-async-std = [
  "otel-push-exporter",
  "opentelemetry-sdk-0-21/rt-async-std"
]

# Exemplars
exemplars-tracing = ["tracing", "tracing-subscriber"]
exemplars-tracing-opentelemetry-0_20 = [
  "opentelemetry-0-20/trace",
  "tracing",
  "dep:tracing-opentelemetry-0-20",
]
exemplars-tracing-opentelemetry-0_21 = [
  "opentelemetry-0-20/trace", # yea for some reason they use otel 0.20 with tracing-opentelemetry 0.21. only 0.22 is updated w/ otel 0.21
  "tracing",
  "dep:tracing-opentelemetry-0-21",
]

# Custom objectives
custom-objective-percentile = []
custom-objective-latency = []

[dependencies]
autometrics-macros = { workspace = true }
linkme = "0.3"
once_cell = "1.17"
spez = "0.1.2"
thiserror = "1"

# Used for opentelemetry feature
## The opentelemetry_api crate has been incorperated into `opentelemetry` as of v0.21 so the `package` directives are different
opentelemetry-0-20 = { package = "opentelemetry_api", version = "0.20", default-features = false, optional = true }
opentelemetry-0-21 = { package = "opentelemetry", version = "0.21", default-features = false, optional = true }

opentelemetry-prometheus-0-13 = { package = "opentelemetry-prometheus", version = "0.13", optional = true } # otel 0.20
opentelemetry-prometheus-0-14 = { package = "opentelemetry-prometheus", version = "0.14", optional = true } # otel 0.21

opentelemetry-sdk-0-20 = { package = "opentelemetry_sdk", version = "0.20", default-features = false, features = ["metrics"], optional = true }
opentelemetry-sdk-0-21 = { package = "opentelemetry_sdk", version = "0.21", default-features = false, features = ["metrics"], optional = true }

opentelemetry-otlp-0-20 = { package = "opentelemetry-otlp", version = "0.13", default-features = false, optional = true }
opentelemetry-otlp-0-21 = { package = "opentelemetry-otlp", version = "0.14", default-features = false, optional = true }

# Use for metrics feature
metrics = { version = "0.21", default-features = false, optional = true }

# Used for prometheus-exporter feature
http = { version = "0.2", optional = true }
metrics-exporter-prometheus = { version = "0.12", default-features = false, optional = true }
prometheus = { version = "0.13", default-features = false, optional = true }

# Used for prometheus-client feature
prometheus-client = { version = "0.21.1", optional = true }

# Used for exemplars-tracing feature
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "registry",
], optional = true }

# Used for exemplars-tracing-opentelemetry feature
tracing-opentelemetry-0-20 = { package = "tracing-opentelemetry", version = "0.20.0", default-features = false, optional = true }
tracing-opentelemetry-0-21 = { package = "tracing-opentelemetry", version = "0.21.0", default-features = false, optional = true }

[dev-dependencies]
async-trait = "0.1.74"
axum = { version = "0.6", features = ["tokio"] }
criterion = "0.5"
http = "0.2"
opentelemetry = "0.20"
opentelemetry-stdout = { version = "0.1", features = ["trace"] }
prometheus-client = "0.21"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
trybuild = "1.0"
uuid = { version = "1", features = ["v4"] }
vergen = { version = "8.1", features = ["git", "gitcl"] }

[build-dependencies]
cfg_aliases = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "basic_benchmark"
harness = false
