[package]
name = "metrics-attributes-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.16.0"
proc-macro2 = "1.0.49"
quote = "1.0.23"
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
syn =  { version = "1.0.107", features = ["extra-traits", "full"] }
urlencoding = "2.1.2"
