[package]
name = "autometrics-macros"
version = "0.2.3"
edition = "2021"
authors = ["Fiberplane <info@fiberplane.com>", "Evan Schwartz <3262610+emschwartz@users.noreply.github.com>"]
description = "Macros for the autometrics crate"
documentation = "https://docs.rs/autometrics"
readme = "../README.md"
repository = "https://github.com/fiberplane/autometrics-rs"
license = "MIT OR Apache-2.0"
keywords = ["metrics", "prometheus", "opentelemetry"]
categories = ["development-tools::profiling"]

[lib]
proc-macro = true

[dependencies]
percent-encoding = "2.2"
proc-macro2 = "1"
quote = "1"
rust_decimal = "1.28"
syn =  { version = "1", features = ["full"] }
