[package]
name = "example-actix-web"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.3.1"
autometrics = { path = "../../autometrics", features = ["prometheus-exporter"] }
autometrics-example-util = { path = "../util" }
rand = "0.8.5"
reqwest = "0.11"
tokio = { version = "1.28.2", features = ["full"] }
