[package]
name = "example-axum"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
autometrics = { path = "../../autometrics", features = ["prometheus", "prometheus-exporter"] }
autometrics-example-util = { path = "../util" }
axum = { version = "0.6", features = ["json"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
