[package]
name = "example-custom-metrics"
version = "0.0.0"
publish = false
edition = "2021"

[features]
metrics = ["autometrics/metrics", "dep:metrics"]
opentelemetry = ["autometrics/opentelemetry", "dep:opentelemetry"]
prometheus = ["autometrics/prometheus", "dep:prometheus"]
prometheus-client = ["autometrics/prometheus-client", "dep:prometheus-client"]

[dependencies]
autometrics = { path = "../../autometrics", features = ["prometheus-exporter"] }
metrics = { version = "0.21.1", optional = true }
once_cell = "1.17"
opentelemetry = { version = "0.19.0", features = ["metrics"], optional = true }
prometheus = { version = "0.13", optional = true }
prometheus-client = { version = "0.21.2", optional = true }
