[package]
name = "example-exemplars-opentelemetry"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
autometrics = { path = "../../autometrics", features = [
  "prometheus-client",
  "prometheus-exporter",
  "exemplars-opentelemetry"
  ] }
autometrics-example-util = { path = "../util" }
axum = { version = "0.6", features = ["json"] }
axum-tracing-opentelemetry = { version = "0.10", features = ["tracing_subscriber_ext", "otlp"] }
opentelemetry = "0.19"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
