[package]
name = "example-exemplars-tracing-opentelemetry"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
autometrics = { path = "../../autometrics", features = [
  "prometheus-client",
  "prometheus-exporter",
  "exemplars-tracing-opentelemetry"
  ] }
autometrics-example-util = { path = "../util" }
axum = { version = "0.6", features = ["json"] }
axum-tracing-opentelemetry = "0.10"
opentelemetry = "0.19"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
