[package]
name = "example-exemplars-tracing-opentelemetry"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
autometrics = { path = "../../autometrics", features = [
  "prometheus-client-0_22",
  "prometheus-exporter",
  "exemplars-tracing-opentelemetry-0_25",
] }
autometrics-example-util = { path = "../util" }
axum = { version = "0.7.2", features = ["json"] }
opentelemetry = "0.24"
opentelemetry_sdk = "0.24"
opentelemetry-stdout = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
