[package]
name = "example-exemplars-tracing"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
autometrics = { path = "../../autometrics", features = [
  "prometheus-client",
  "prometheus-exporter",
  "exemplars-tracing"
  ] }
autometrics-example-util = { path = "../util" }
axum = { version = "0.6", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4"] }
